--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h3 id="display"></h3>
 
     <script src="js/snack1.js"></script>
     <!-- <script src="js/snack2.js"></script> -->
