--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
 
     <!-- <script src="js/snack1.js"></script> -->
-    <script src="js/snack2.js"></script>
+    <!-- <script src="js/snack2.js"></script> -->
+    <script src="js/snack3.js"></script>
+    <!-- <script src="js/snack4.js"></script> -->
 </body>
 
 
